- Redhat 7 (broken string.h problem), ./Config
- Added SSL connections, open ports with P:ip:s:*:port to make them SSL
  ports, made after hq.alert.sk's implementation
- Added P:line flags C - client only, S - server only, J - java clients (replaces CONFROOM_JAVA_PORT)
- Fixed up a few various things
- Made SHOWCONNECTNOTICES work properly again, also with SSL
- Changed ./Config to detect SSL better, and generate certificates properly
- Removed some annoying logging in ssl.c
- Merged in changes from TEMPcvs branch
- Fixed a /UNSQLINE para problem, found by Joe
- #define SHOW_SECRET now allows all ircops to see +s channels in /whois.  If not defined, only net/tech admins can.
- Added #define CENSOR_QUIT, for WaveRide
- Fixed hashing bug that caused the server to crash on exit
- Made find_server_b64_or_real be a little faster, possible fixing bug
- Made /stats s checking check for sanity or insanity (ignore them for 0
  numerics)
- Fixed SJOIN (mp2parv) bug, that caused insane desynchs
- Changed Cannot find server message to be to sendto_realops
- Fixed a warning in CENSOR_QUIT
- Fixed the G:Line user wrongly matching (ip-alike addys didnt check user)
- Added protoctl SJB64, which adds B64-9 timestamps to many timestamping
  operations
- Added ircsprintf %B (base64-9^10) with ! as prefix, and %b (no prefix)
- Fixed a few places where for some reason sprintf() was used rather than ircsprintf()
- Tokenized ADCHAT, TECHAT, NACHAT, SWHOIS, and SVSKILL
- Fixed a bug in opermode that would make it display a notice on invalid modes
- Fixed a bug where the Found your hostname (cached) message was messed up
- Fixed a memory leak in the new password code
- Fixed a sptr->passwd bug
- Removed the unnecessary param from IsULine() it is now just IsULine(sptr)
- ircsprintf() is now used everywhere
- Fixed the SJB64 bugs that misplaced users
- Removed sendto_helpops and replaced it with sendto_umode