@@ -491,7 +491,7 @@ static char *replies[] = {
 /* 444    ERR_NOLOGIN */ ":%s 444 %s %s :User not logged in",
 /* 445    ERR_SUMMONDISABLED */ ":%s 445 %s :SUMMON has been disabled",
 /* 446    ERR_USERSDISABLED */ ":%s 446 %s :USERS has been disabled",
-/* 447 */ NULL,
+/* 447    ERR_NONICKCHANGE */ ":%s 447 %s :Can not change nickname while on %s (+N)",
 /* 448 */ NULL,
 /* 449 */ NULL,
 /* 450 */ NULL,
